[gd_scene load_steps=9 format=3 uid="uid://hwvatwkj6km6"]

[ext_resource type="PackedScene" uid="uid://7mm1fthd05j6" path="res://scenes/characters/enemy.tscn" id="1_8k5sh"]
[ext_resource type="Script" path="res://scripts/Lakitu.gd" id="2_xk5e4"]
[ext_resource type="Texture2D" uid="uid://eh5egx0rrwpa" path="res://assets/graphics/enemies.png" id="3_8a0e6"]

[sub_resource type="Animation" id="Animation_bcv8i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_36npc"]
resource_name = "idle"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7085n"]
resource_name = "throw"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Graphics/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7tplx"]
_data = {
"RESET": SubResource("Animation_bcv8i"),
"idle": SubResource("Animation_36npc"),
"throw": SubResource("Animation_7085n")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2vo41"]
radius = 8.0
height = 24.0

[node name="Lakitu" instance=ExtResource("1_8k5sh")]
script = ExtResource("2_xk5e4")

[node name="Sprite2D" parent="Graphics" index="0"]
position = Vector2(0, -12)
texture = ExtResource("3_8a0e6")
hframes = 2
region_enabled = true
region_rect = Rect2(432, 8, 32, 24)

[node name="CollisionShape2D" parent="." index="1"]
disabled = true

[node name="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_7tplx")
}

[node name="VisibleOnScreenNotifier2D" parent="." index="4"]
position = Vector2(-4.76837e-07, -12)
scale = Vector2(0.8, 1.2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_2vo41")

[node name="ThrowTimer" type="Timer" parent="." index="6"]
wait_time = 2.0
autostart = true

[node name="RespawnTimer" type="Timer" parent="." index="7"]
process_mode = 1
wait_time = 8.0
one_shot = true

[node name="ByePoint" type="Marker2D" parent="." index="8"]
top_level = true

[connection signal="timeout" from="ThrowTimer" to="." method="_on_throw_timer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
